# Runnywhere-PlayMCP

./: .dockerignore  .gitignore  DATA_LICENSES.md  Dockerfile  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
artifacts/: playmcp-loadtest-local.json
data/: facilities.pkl  infra_points.pkl  snapshot.json
etl/: build_graph.py  build_rfs.py
scripts/: build_animal_presets.py  loadtest.py
src/runart/: __init__.py  animal_presets.py  course.py  data_integrity.py  exploration.py  facilities.py  geo.py  geocode.py  gpx.py  graph.py  infrastructure.py  models.py  render.py  rfs.py  server.py  shapes.py  stations.py
tests/: test_animal_presets.py  test_course.py  test_data_integrity.py  test_exploration.py  test_infrastructure.py  test_scenarios.py  test_shapes.py  test_tools.py
