[project]
name = "runart"
version = "0.1.0"
description = "Runnywhere(러니웨어) — 어디서든 러닝 코스 짜기!"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    # Verified against PlayMCP's supported protocol range
    # (2025-03-26 through 2025-11-25). Pin contest builds for reproducibility.
    "mcp==1.28.1",
    "networkx>=3.2",
    "numpy>=1.26",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
etl = ["osmnx>=2.0", "geopandas>=1.0", "requests>=2.31"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
